[metadata]
name = mutextree
author = Adrian Vandier Ast
author-email = adrian.vandierast@sewan.fr
summary = Python lib to protect tree-like resources
description-file = README.rst
home-page = https://gitlab.priv.sewan.fr/sophia/mutextree
license =
classifier =
keywords =

[files]
packages =
    mutextree

[entry_points]
#console_scripts =

[testenv]
deps = pipenv
envlist = py27,py36

[testenv:py27]
commands =
  pipenv install --dev
  pipenv run python --version
  pipenv run pytest \
        --cov=mutextree --cov-report xml\
        {posargs}

[testenv:py34]
commands =
  pipenv install --dev
  pipenv run python --version
  pipenv run pytest \
        --cov=mutextree --cov-report xml\
        {posargs}

[testenv:py35]
commands =
  pipenv install --dev
  pipenv run python --version
  pipenv run pytest \
        --cov=mutextree --cov-report xml\
        {posargs}

[testenv:py36]
commands =
  pipenv install --dev
  pipenv run python --version
  pipenv run pytest \
        --cov=mutextree --cov-append --cov-report term --cov-report html --cov-report xml\
        {posargs}

[tool:pytest]
addopts = -rfEsx --tb=short

[coverage:run]
omit =
    # omit anything in a .local directory anywhere
    */.tox/*
    # omit everything in /usr
    /usr/*
[coverage:xml]
output = reports/cover.xml
[coverage:html]
directory = reports/html_report

[flake8]
ignore= W503
max-line-length = 110
